Fix notes dropdown z-index

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -148,7 +148,7 @@ input[type="number"] {
   background-color: #ebe2d3;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 0 5px #979aa4;
 }
 
@@ -890,7 +890,7 @@ input[type="number"] {
   justify-content: space-between;
   align-items: flex-start;
   box-shadow: 0 0 5px #979aa4;
-  z-index: 1;
+  z-index: 3;
 }
 
 /*
